测试随机涩图API

--- a/content/post/Codeforces/CF1008.md
+++ b/content/post/Codeforces/CF1008.md
@@ -1,8 +1,11 @@
 +++
-title = "CodeForces Round497 Div2"
+title = "Codeforces Round #497 (Div. 2)"
 date = "2018-07-14T16:55:16+08:00"
 tags = ["算法竞赛"]
+categories = ["XCPC"]
 description = ""
+image = "https://api.ixiaowai.cn/api/api.php"
+slug = "CF1008"
 +++
 
 # A Romaji
