--- a/content/post/Codeforces/CF1395.md
+++ b/content/post/Codeforces/CF1395.md
@@ -1,8 +1,11 @@
 +++
-title = "Codeforces 1395"
+title = "Codeforces Round #664 (Div. 2)"
 date = "2020-08-14T09:52:00+08:00"
 tags = ["算法竞赛"]
+categories = ["XCPC"]
 description = ""
+image = "https://api.ixiaowai.cn/api/api.php"
+slug = "CF1395"
 +++
 
 
