咕咕了那么久终于把魔改Nokia G-010S-A写了

--- a/content/post/Codeforces/CF1509.md
+++ b/content/post/Codeforces/CF1509.md
@@ -4,7 +4,7 @@ date = "2021-04-17T17:05:05+08:00"
 tags = ["算法竞赛"]
 categories = ["XCPC"]
 description = "小号 RANK 281,1584 → 1706"
-image = "https://api.ixiaowai.cn/api/api.php"
+image = "https://api.yimian.xyz/img"
 slug = "CF1509"
 +++
 
