--- a/content/post/Codeforces/CF1678.md
+++ b/content/post/Codeforces/CF1678.md
@@ -14,7 +14,7 @@ categories: ["XCPC"]
 # hidemeta: false
 # comments: false
 description: "小号，RANK450，+47"
-image: "https://api.ixiaowai.cn/api/api.php"
+image: "https://www.dmoe.cc/random.php"
 ---
 
 https://codeforces.com/contest/1678
