--- a/content/post/Codeforces/CF1008.md
+++ b/content/post/Codeforces/CF1008.md
@@ -4,7 +4,7 @@ date = "2018-07-14T16:55:16+08:00"
 tags = ["算法竞赛"]
 categories = ["XCPC"]
 description = ""
-image = "https://api.ixiaowai.cn/api/api.php"
+# image = ""
 slug = "CF1008"
 +++
 
